<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>a2m</groupId>
  <artifactId>a2m</artifactId>
  <version>1.0</version>
  <packaging>pom</packaging>
  
     <parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.4</version>
		<relativePath />
	</parent>

  <properties>
          <java.version>25</java.version>

          <prometheus.version>1.0.0</prometheus.version>

		<kafka-client-version>2.8.0</kafka-client-version>
		<commons-logging-version>1.2</commons-logging-version>
		<commons-configuration-version>1.10</commons-configuration-version>
		<log4j-2-version>2.17.0</log4j-2-version>
		<commons-dbcp2-version>2.8.0</commons-dbcp2-version>
		<mariadb-java-client-version>2.3.0</mariadb-java-client-version>
	    <mariadb.version>3.3.0</mariadb.version>

		<javax.servlet-api-version>4.0.1</javax.servlet-api-version>
		<commons-net-version>3.6</commons-net-version>
		<commons-validator-version>1.6</commons-validator-version>
		<commons-codec-version>1.10</commons-codec-version>
		<jetty-servlet-version>9.4.40.v20210413</jetty-servlet-version>
		<simpleclient_httpserver-version>0.9.0</simpleclient_httpserver-version>
		<simpleclient_servlet-version>0.9.0</simpleclient_servlet-version>
		<jedis-version>5.1.2</jedis-version>
		<kafka-clients-version>2.8.0</kafka-clients-version>
		<http-client-version>4.5.13</http-client-version>
		<jackson-databind-version>2.12.1</jackson-databind-version>
		<commons-text-version>1.9</commons-text-version>
		<commons-csv-version>1.8</commons-csv-version>
		<json-simple-version>1.1.1</json-simple-version>
		<commons-math3-version>3.6.1</commons-math3-version>
		<drools-version>5.4.0.Final</drools-version>
		<gson-version>2.8.8</gson-version>
		<quartz-scheduler-version>2.3.2</quartz-scheduler-version>
		<ch-smpp-version>5.0.0</ch-smpp-version>
		<json-simple-version>1.1.1</json-simple-version>
		<http-client-version>4.5.13</http-client-version>
		<jaxb-api-version>2.2.11</jaxb-api-version>
		<jaxb-core-version>2.2.11</jaxb-core-version>
		<jaxb-impl-version>2.2.11</jaxb-impl-version>
		<activation-version>1.1.1</activation-version>
		<eu.bitwalke-version>1.21</eu.bitwalke-version>
		<elasticsearch-rest-high-level-client-version>7.12.0</elasticsearch-rest-high-level-client-version>
		<gson-version>2.8.8</gson-version>
		<commons-csv-version>1.8</commons-csv-version>
		<quartz-scheduler-version>2.3.2</quartz-scheduler-version>
		<kafka-clients-version>2.8.0</kafka-clients-version>

		<!-- Build related -->
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<nexus_url>http://10.0.1.21:8081</nexus_url>
		<nexus_repository>${nexus_url}/repository</nexus_repository>
		<itextos_lib>${nexus_repository}/iTexTos_lib/</itextos_lib>
		<itextos_release>${nexus_repository}/iTexTos_release/</itextos_release>

		<!-- Compiler Related -->
	<!-- 	<maven-compiler-plugin-version>3.8.1</maven-compiler-plugin-version> -->
		<maven-compiler-plugin-version>3.10.1</maven-compiler-plugin-version> 
		<maven-war-plugin>3.3.2</maven-war-plugin> 

		<spring-boot-maven-plugin-version>2.6.2</spring-boot-maven-plugin-version>
		<maven-source-plugin-version>3.2.1</maven-source-plugin-version>
		<jdk-build-version>25</jdk-build-version>

	</properties>




  <modules>
  	<module>common</module>
  	<module>lib</module>
  	<module>thirdpartyjar</module>
  	<module>inmemory</module>
  	<module>platform</module>
  	<module>http</module>
  	<module>smpp</module>
	<module>mainmodule</module>

	<module>servlet</module>
	<module>properties</module>
	<module>python-cron</module>
	<module>databasescript</module>
	<module>docker-beacon</module>

  </modules>
  
    <dependencies>
        <!-- Spring Boot WebFlux (Reactive Web) -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-webflux</artifactId>
             <exclusions>
                <!-- Exclude any Tomcat dependencies -->
                <exclusion>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-starter-tomcat</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        
        <dependency>
    		<groupId>org.springframework.boot</groupId>
    		<artifactId>spring-boot-starter-reactor-netty</artifactId>
		</dependency>
        
         <!-- Use Netty explicitly -->
        <dependency>
            <groupId>io.projectreactor.netty</groupId>
            <artifactId>reactor-netty</artifactId>
        </dependency>
        <!-- 
           <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        -->
         <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>jcl-over-slf4j</artifactId>
    </dependency>
    
        <!-- Actuator for metrics and monitoring -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>
        
        
         <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-logging</artifactId>
    </dependency>
        
        <!-- Micrometer Prometheus Registry -->
        <dependency>
            <groupId>io.micrometer</groupId>
            <artifactId>micrometer-registry-prometheus</artifactId>
            <version>1.12.0</version>
        </dependency>
        
        <!-- Testing -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.projectreactor</groupId>
            <artifactId>reactor-test</artifactId>
            <scope>test</scope>
        </dependency>
        
        <!-- Additional useful dependencies -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-configuration-processor</artifactId>
            <optional>true</optional>
        </dependency>

  </dependencies>
  
  <build>
		<sourceDirectory>src/main/java</sourceDirectory>
		
    <plugins>
 
  
 	<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
				<configuration>
					<source>${jdk-build-version}</source>
					<target>${jdk-build-version}</target>
				</configuration>
			</plugin>

  


			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>${maven-source-plugin-version}</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

 	<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
				<configuration>
					<source>${jdk-build-version}</source>
					<target>${jdk-build-version}</target>
				</configuration>
			</plugin>

  


			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>${maven-source-plugin-version}</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			
    </plugins>
    </build>

</project>